--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui" />
 
-    <title>Rule</title>
+    <title>Rich Man</title>
 
     <link href="css/index.css" rel="stylesheet" type="text/css" />
     <link href="res/oa/oa-jelly.css" rel="stylesheet" type="text/css" />
