--- a/index.html
+++ b/index.html
@@ -17,12 +17,96 @@
 
   </head>
   <body lang="zh-tw">
-    
+
     <div id='container'>
       <div class="map">
         <i></i><i></i><i></i><i></i>
         <div id='map'></div>
         <button type='button' id='dice'>擲骰子</button>
+        <div class='btns'>
+          <div>
+            <button class='button about'>關於</button>
+            <button class='button more'>更多</button>
+            <a class='button' href='https://github.com/comdan66/OA-richman' target='_blank'>GitHub</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id='about' class='hide'>
+      <div class='paper'>
+        <h2>關於 OA-richman</h2>
+        <div class='about'>
+          <div class='info'>
+            <div class='l'>作者名稱</div>
+            <div class='r'><a href='http://www.ioa.tw' target='_blank'>OA Wu</a></div>
+          </div>
+          <div class='info'>
+            <div class='l'>E-mail</div>
+            <div class='r'>comdan66@gmail.com</div>
+          </div>
+          <div class='info'>
+            <div class='l'>作品名稱</div>
+            <div class='r'>OA-richman</div>
+          </div>
+          <div class='info'>
+            <div class='l'>最新版本</div>
+            <div class='r'>1.0.0</div>
+          </div>
+          <div class='info'>
+            <div class='l'>GitHub</div>
+            <div class='r'><a href='https://github.com/comdan66/OA-richman' target='_blank'>OA-richman</a></div>
+          </div>
+          <div class='info'>
+            <div class='l'>相關資源</div>
+            <div class='r'><a href='https://developers.google.com/maps/documentation/javascript/markers' target='_blank'>Google maps API</a></div>
+          </div>
+          <div class='info'>
+            <div class='l'>更新日期</div>
+            <div class='r'>2015/05/05</div>
+          </div>
+        </div>
+        <div class='close'>&#10006;</div>
+      </div>
+    </div>
+
+    <div id='more' class='hide'>
+      <div class='paper'>
+
+        <h2>更多相關作品</h2>
+
+        <div class='more'>
+          <div class='info'>
+            <div class='l'>Material Design UI</div>
+            <div class='r'><a href='https://github.com/comdan66/OA-material' target='_blank'>OA-material</a></div>
+          </div>
+          <div class='info'>
+            <div class='l'>Js 迷宮</div>
+            <div class='r'><a href='https://github.com/comdan66/OA-maze' target='_blank'>OA-maze</a></div>
+          </div>
+          <div class='info'>
+            <div class='l'>Js imgLiquid</div>
+            <div class='r'><a href='https://github.com/comdan66/OA-imgLiquid' target='_blank'>OA-imgLiquid</a></div>
+          </div>
+          <div class='info'>
+            <div class='l'>導航列</div>
+            <div class='r'><a href='https://github.com/comdan66/OA-navbar' target='_blank'>OA-navbar</a></div>
+          </div>
+          <div class='info'>
+            <div class='l'>Js Slider View</div>
+            <div class='r'><a href='https://github.com/comdan66/OA-scrollSliderView' target='_blank'>OA-scrollSliderView</a></div>
+          </div>
+          <div class='info'>
+            <div class='l'>Youtube Play List</div>
+            <div class='r'><a href='https://github.com/comdan66/u2' target='_blank'>OA-u2</a></div>
+          </div>
+          <div class='info'>
+            <div class='l'>Flickr Search</div>
+            <div class='r'><a href='https://github.com/comdan66/flickr' target='_blank'>OA-flickr</a></div>
+          </div>
+        </div>
+
+        <div class='close'>&#10006;</div>
       </div>
     </div>
 
@@ -36,7 +120,7 @@
           <div class="right"></div>
           <div class="bottom"></div>
         </div>
-      </div>      
+      </div>
     </div>
 
   </body>
