--- a/index.html
+++ b/index.html
@@ -5,7 +5,51 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui" />
 
-    <title>Rich Man</title>
+    <title>OA-richman</title>
+
+    <meta name="robots" content="index,follow" />
+
+    <meta name="author" content="吳政賢(OA Wu)" />
+    <meta name="keywords" content="OA-richman | google maps richman | google maps api | google maps | richman" />
+    <meta name="description" content="這是一個使用 google maps api 製作的大富翁雛形！基本上是利用 google maps 的 markers 以及 Polyline 所建置出路線、節點、角色... 等設計，未來將會畫出連線、計分、蓋房... 等，如有興趣者歡迎至 GitHub Clone，非常歡迎討論與分享！" />
+
+    <meta property="og:site_name" content="OA-richman" />
+    <meta property="og:title" content="OA-richman" />
+    <meta property="og:description" content="這是一個使用 google maps api 製作的大富翁雛形！基本上是利用 google maps 的 markers 以及 Polyline 所建置出路線、節點、角色... 等設計，未來將會畫出連線、計分、蓋房... 等，如有興趣者歡迎至 GitHub Clone，非常歡迎討論與分享！" />
+    <meta property="og:url" content="http://comdan66.github.io/OA-richman/index.html" />
+
+    <meta property="fb:admins" content="100000100541088" />
+    <meta property="fb:app_id" content="640377126095413" />
+
+    <meta property="og:locale" content="zh_TW" />
+    <meta property="og:locale:alternate" content="en_US" />
+
+    <meta property="og:type" content="city" />
+    <meta property="og:image" content="http://comdan66.github.io/OA-richman/img/og/larger-compressor.jpg" alt="OA-richman" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <meta property="og:image" content="http://comdan66.github.io/OA-richman/img/og/small-compressor.jpg" alt="OA-richman" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="600" />
+    <meta property="og:image:height" content="315" />
+
+    <meta property="og:image" content="http://comdan66.github.io/OA-richman/img/og/mini-compressor.jpg" alt="OA-richman" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="200" />
+    <meta property="og:image:height" content="200" />
+
+    <meta property="og:image" content="http://comdan66.github.io/OA-richman/img/og/story-compressor.jpg" alt="OA-richman" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="600" />
+    <meta property="og:image:height" content="600" />
+
+    <meta property="og:image" content="http://comdan66.github.io/OA-richman/img/og/non-stoty-compressor.jpg" alt="OA-richman" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="600" />
+    <meta property="og:image:height" content="314" />
+
 
     <link href="css/index.css" rel="stylesheet" type="text/css" />
     <link href="res/oa/oa-jelly.css" rel="stylesheet" type="text/css" />
