--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
     <script src="res/jquery_v1.10.2/jquery-1.10.2.min.js" language="javascript" type="text/javascript" ></script>
     <script src="res/oa/oa-jelly.js" language="javascript" type="text/javascript" ></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&language=zh-TW" language="javascript" type="text/javascript"></script>
+    <script src="js/ga.js" language="javascript" type="text/javascript" ></script>
+    <script src="js/funcs.js" language="javascript" type="text/javascript" ></script>
     <script src="js/index.js" language="javascript" type="text/javascript" ></script>
 
   </head>
