Finish module sample.

--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
       </div>
     </div>
 
-    <div class='run hide'>
+    <div id='run_dice' class='hide'>
       <div>
-        <div id="cube" class="show1">
-          <div class="top"></div>
-          <div class="front"></div>
-          <div class="left"></div>
-          <div class="back"></div>
-          <div class="right"></div>
-          <div class="bottom"></div>
+        <div id='dice' class='show1'>
+          <div class='top'></div>
+          <div class='front'></div>
+          <div class='left'></div>
+          <div class='back'></div>
+          <div class='right'></div>
+          <div class='bottom'></div>
         </div>
       </div>
     </div>
