--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
     <meta property="og:image:width" content="600" />
     <meta property="og:image:height" content="314" />
 
-    <link href="css/index.css" rel="stylesheet" type="text/css" />
     <link href="res/oa/oa-jelly.css" rel="stylesheet" type="text/css" />
+    <link href="css/pop_up.css" rel="stylesheet" type="text/css" />
+    <link href="css/index.css" rel="stylesheet" type="text/css" />
 
     <script src="res/jquery_v1.10.2/jquery-1.10.2.min.js" language="javascript" type="text/javascript" ></script>
     <script src="res/oa/oa-jelly.js" language="javascript" type="text/javascript" ></script>
@@ -81,6 +82,47 @@
           <div class='right'></div>
           <div class='bottom'></div>
         </div>
+      </div>
+    </div>
+
+
+    <div id='pop_up' class='hide'>
+      <div class='paper'>
+
+        <h2>更多相關作品</h2>
+
+        <div class='pop_up'>
+          <div class='i'>
+            <div class='l'>Material Design UI</div>
+            <div class='r'><a href='https://github.com/comdan66/OA-material' target='_blank'>OA-material</a></div>
+          </div>
+          <div class='i'>
+            <div class='l'>北港迎媽祖</div>
+            <div class='r'><a href='http://comdan66.github.io/matsu/2015/din-tao_map-19an.html' target='_blank'>OA-matsu</a></div>
+          </div>
+          <div class='i'>
+            <div class='l'>Js 迷宮</div>
+            <div class='r'><a href='https://github.com/comdan66/OA-maze' target='_blank'>OA-maze</a></div>
+          </div>
+          <div class='i'>
+            <div class='l'>Js imgLiquid</div>
+            <div class='r'><a href='https://github.com/comdan66/OA-imgLiquid' target='_blank'>OA-imgLiquid</a></div>
+          </div>
+          <div class='i'>
+            <div class='l'>導航列</div>
+            <div class='r'><a href='https://github.com/comdan66/OA-navbar' target='_blank'>OA-navbar</a></div>
+          </div>
+          <div class='i'>
+            <div class='l'>Js Slider View</div>
+            <div class='r'><a href='https://github.com/comdan66/OA-scrollSliderView' target='_blank'>OA-scrollSliderView</a></div>
+          </div>
+          <div class='i'>
+            <div class='l'>Youtube Play List</div>
+            <div class='r'><a href='https://github.com/comdan66/u2' target='_blank'>OA-u2</a></div>
+          </div>
+        </div>
+
+        <div class='close'>&#10006;</div>
       </div>
     </div>
 
