--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
         <i></i><i></i><i></i><i></i>
         <div id='map'></div>
         <button type='button' id='throw_dice'>擲骰子</button>
+        <div class='btns'>
+          <div>
+            <button class='button about'>關於</button>
+            <button class='button more'>更多</button>
+            <a class='button' href='https://github.com/comdan66/OA-richman' target='_blank'>GitHub</a>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -84,7 +91,6 @@
         </div>
       </div>
     </div>
-
 
     <div id='pop_up' class='hide'>
       <div class='paper'>
