Temp buy feature.

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 
     <script src="res/jquery_v1.10.2/jquery-1.10.2.min.js" language="javascript" type="text/javascript" ></script>
     <script src="res/oa/oa-jelly.js" language="javascript" type="text/javascript" ></script>
+    <script src="res/infobubble-v3/infobubble-compiled.js" language="javascript" type="text/javascript" ></script>
+
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&language=zh-TW" language="javascript" type="text/javascript"></script>
     <script src="js/ga.js" language="javascript" type="text/javascript" ></script>
     <script src="js/funcs.js" language="javascript" type="text/javascript" ></script>
@@ -69,6 +71,7 @@
         <i></i><i></i><i></i><i></i>
         <div id='map'></div>
         <button type='button' id='throw_dice'>擲骰子</button>
+        <div id='quota'>剩餘點數<span>1000</span>元</div>
         <div class='btns'>
           <div>
             <button class='button about'>關於</button>
