Buy feature finish 80%.

--- a/index.html
+++ b/index.html
@@ -71,13 +71,11 @@
         <i></i><i></i><i></i><i></i>
         <div id='map'></div>
         <button type='button' id='throw_dice'>擲骰子</button>
-        <div id='quota'>剩餘點數<span>1000</span>元</div>
-        <div class='btns'>
-          <div>
-            <button class='button about'>關於</button>
-            <button class='button more'>更多</button>
-            <a class='button' href='https://github.com/comdan66/OA-richman' target='_blank'>GitHub</a>
-          </div>
+        <div id='quota1'>玩家 剩餘點數<span>800</span>元</div>
+        <div id='quota2'>電腦 剩餘點數<span>1000</span>元</div>
+        <div id='logs'>
+          <div>遊戲開始</div>
+          <div>遊戲開始</div>
         </div>
       </div>
     </div>
