Buy feature finish 90%.

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
         <i></i><i></i><i></i><i></i>
         <div id='map'></div>
         <button type='button' id='throw_dice'>擲骰子</button>
-        <div id='quota1'>玩家 剩餘點數<span>1000</span>元</div>
-        <div id='quota2'>電腦 剩餘點數<span>1000</span>元</div>
+        <div id='quota1'><b>玩家</b> 剩餘點數<span>1000</span>元</div>
+        <div id='quota2'><b>電腦</b> 剩餘點數<span>1000</span>元</div>
         <div id='logs'>
         </div>
       </div>
