--- a/index.html
+++ b/index.html
@@ -71,10 +71,9 @@
         <i></i><i></i><i></i><i></i>
         <div id='map'></div>
         <button type='button' id='throw_dice'>擲骰子</button>
-        <div id='quota1'><b>玩家</b> 剩餘點數<span>1000</span>元</div>
-        <div id='quota2'><b>電腦</b> 剩餘點數<span>1000</span>元</div>
-        <div id='logs'>
-        </div>
+        <div id='quota1'><b>玩家</b> <span>1000</span>元</div>
+        <div id='quota2'><b>電腦</b> <span>1000</span>元</div>
+        <div id='logs'></div>
       </div>
     </div>
 
