Finish buy feature.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&language=zh-TW" language="javascript" type="text/javascript"></script>
     <script src="js/ga.js" language="javascript" type="text/javascript" ></script>
     <script src="js/funcs.js" language="javascript" type="text/javascript" ></script>
+    <script src="js/info.js" language="javascript" type="text/javascript" ></script>
     <script src="js/index.js" language="javascript" type="text/javascript" ></script>
 
   </head>
@@ -71,8 +72,12 @@
         <i></i><i></i><i></i><i></i>
         <div id='map'></div>
         <button type='button' id='throw_dice'>擲骰子</button>
-        <div id='quota1'><b>玩家</b> <span>1000</span>元</div>
-        <div id='quota2'><b>電腦</b> <span>1000</span>元</div>
+        <button type='button' id='about'>關於</button>
+        <button type='button' id='more'>更多</button>
+
+        <div id='quota1'><b>玩家</b> <span>1500</span>元</div>
+        <div id='quota2'><b>電腦</b> <span>1500</span>元</div>
+        
         <div id='logs'></div>
       </div>
     </div>
