--- a/index.html
+++ b/index.html
@@ -1,103 +1,1 @@
-<!DOCTYPE html>
-<html lang="tw">
-  <head>
-    <meta http-equiv="Content-Language" content="zh-tw" />
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui" />
-
-    <title>OA-richman</title>
-
-    <meta name="robots" content="index,follow" />
-
-    <meta name="author" content="吳政賢(OA Wu)" />
-    <meta name="keywords" content="OA-richman | google maps richman | google maps api | google maps | richman" />
-    <meta name="description" content="這是一個使用 google maps api 製作的大富翁雛形！基本上是利用 google maps 的 markers 以及 Polyline 所建置出路線、節點、角色... 等設計，未來將會畫出連線、計分、蓋房... 等，如有興趣者歡迎至 GitHub Clone，非常歡迎討論與分享！" />
-
-    <meta property="og:site_name" content="OA-richman" />
-    <meta property="og:title" content="OA-richman" />
-    <meta property="og:description" content="這是一個使用 google maps api 製作的大富翁雛形！基本上是利用 google maps 的 markers 以及 Polyline 所建置出路線、節點、角色... 等設計，未來將會畫出連線、計分、蓋房... 等，如有興趣者歡迎至 GitHub Clone，非常歡迎討論與分享！" />
-    <meta property="og:url" content="http://works.ioa.tw/OA-richman/index.html" />
-
-    <meta property="fb:admins" content="100000100541088" />
-    <meta property="fb:app_id" content="640377126095413" />
-
-    <meta property="og:locale" content="zh_TW" />
-    <meta property="og:locale:alternate" content="en_US" />
-
-    <meta property="og:type" content="city" />
-    <meta property="og:image" content="http://works.ioa.tw/OA-richman/img/og/larger-compressor.jpg" alt="OA-richman" />
-    <meta property="og:image:type" content="image/jpeg" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
-
-    <meta property="og:image" content="http://works.ioa.tw/OA-richman/img/og/small-compressor.jpg" alt="OA-richman" />
-    <meta property="og:image:type" content="image/jpeg" />
-    <meta property="og:image:width" content="600" />
-    <meta property="og:image:height" content="315" />
-
-    <meta property="og:image" content="http://works.ioa.tw/OA-richman/img/og/mini-compressor.jpg" alt="OA-richman" />
-    <meta property="og:image:type" content="image/jpeg" />
-    <meta property="og:image:width" content="200" />
-    <meta property="og:image:height" content="200" />
-
-    <meta property="og:image" content="http://works.ioa.tw/OA-richman/img/og/story-compressor.jpg" alt="OA-richman" />
-    <meta property="og:image:type" content="image/jpeg" />
-    <meta property="og:image:width" content="600" />
-    <meta property="og:image:height" content="600" />
-
-    <meta property="og:image" content="http://works.ioa.tw/OA-richman/img/og/non-stoty-compressor.jpg" alt="OA-richman" />
-    <meta property="og:image:type" content="image/jpeg" />
-    <meta property="og:image:width" content="600" />
-    <meta property="og:image:height" content="314" />
-
-    <link href="res/oa/oa-jelly.css" rel="stylesheet" type="text/css" />
-    <link href="css/pop_up.css" rel="stylesheet" type="text/css" />
-    <link href="css/index.css" rel="stylesheet" type="text/css" />
-
-    <script src="res/jquery_v1.10.2/jquery-1.10.2.min.js" language="javascript" type="text/javascript" ></script>
-    <script src="res/oa/oa-jelly.js" language="javascript" type="text/javascript" ></script>
-    <script src="res/infobubble-v3/infobubble-compiled.js" language="javascript" type="text/javascript" ></script>
-
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&language=zh-TW" language="javascript" type="text/javascript"></script>
-    <script src="js/ga.js" language="javascript" type="text/javascript" ></script>
-    <script src="js/funcs.js" language="javascript" type="text/javascript" ></script>
-    <script src="js/info.js" language="javascript" type="text/javascript" ></script>
-    <script src="js/index.js" language="javascript" type="text/javascript" ></script>
-
-  </head>
-  <body lang="zh-tw">
-
-    <div id='container'>
-      <div class="map">
-        <i></i><i></i><i></i><i></i>
-        <div id='map'></div>
-        <button type='button' id='throw_dice'>擲骰子</button>
-        <button type='button' id='about'>關於</button>
-        <button type='button' id='more'>更多</button>
-
-        <div id='quota1'><b>玩家</b> <span>1500</span>元</div>
-        <div id='quota2'><b>電腦</b> <span>1500</span>元</div>
-        
-        <div id='logs'></div>
-      </div>
-    </div>
-
-    <div id='run_dice' class='hide'>
-      <div>
-        <div id='dice' class='show1'>
-          <div class='top'></div>
-          <div class='front'></div>
-          <div class='left'></div>
-          <div class='back'></div>
-          <div class='right'></div>
-          <div class='bottom'></div>
-        </div>
-      </div>
-    </div>
-
-    <div id='pop_up' class='hide'>
-      <div class='paper'></div>
-    </div>
-
-  </body>
-</html>
+<!DOCTYPE html><html lang="tw"><head><meta http-equiv="refresh" content="0; url=http://works.ioa.tw/OA-richman/"><meta http-equiv="Content-Language" content="zh-tw" /><meta http-equiv="Content-type" content="text/html; charset=utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui" /><title>iOA</title><script type="text/javascript">window.location.replace ('http://works.ioa.tw/OA-richman/');</script></head><body lang="zh-tw"><a href='http://works.ioa.tw/OA-richman/' style='font-size: 25px;display:inline-block;margin: 100px 10px;'>關於 OA Wu - iOA</a></body></html>
