--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <meta property="og:locale" content="zh_TW" />
     <meta property="og:locale:alternate" content="en_US" />
+    //此处进行测试
 
     <meta property="og:type" content="city" />
     <meta property="og:image" content="http://works.ioa.tw/OA-richman/img/og/larger-compressor.jpg" alt="OA-richman" />
