--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:site_name" content="OA-richman" />
     <meta property="og:title" content="OA-richman" />
     <meta property="og:description" content="這是一個使用 google maps api 製作的大富翁雛形！基本上是利用 google maps 的 markers 以及 Polyline 所建置出路線、節點、角色... 等設計，未來將會畫出連線、計分、蓋房... 等，如有興趣者歡迎至 GitHub Clone，非常歡迎討論與分享！" />
-    <meta property="og:url" content="http://works.ioa.tw/OA-richman/index.html" />
+    <meta property="og:url" content="https://works.ioa.tw/OA-richman/index.html" />
 
     <meta property="fb:admins" content="100000100541088" />
     <meta property="fb:app_id" content="640377126095413" />
@@ -25,27 +25,27 @@
     <meta property="og:locale:alternate" content="en_US" />
 
     <meta property="og:type" content="city" />
-    <meta property="og:image" content="http://works.ioa.tw/OA-richman/img/og/larger-compressor.jpg" alt="OA-richman" />
+    <meta property="og:image" content="https://works.ioa.tw/OA-richman/img/og/larger-compressor.jpg" alt="OA-richman" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
-    <meta property="og:image" content="http://works.ioa.tw/OA-richman/img/og/small-compressor.jpg" alt="OA-richman" />
+    <meta property="og:image" content="https://works.ioa.tw/OA-richman/img/og/small-compressor.jpg" alt="OA-richman" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="600" />
     <meta property="og:image:height" content="315" />
 
-    <meta property="og:image" content="http://works.ioa.tw/OA-richman/img/og/mini-compressor.jpg" alt="OA-richman" />
+    <meta property="og:image" content="https://works.ioa.tw/OA-richman/img/og/mini-compressor.jpg" alt="OA-richman" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="200" />
     <meta property="og:image:height" content="200" />
 
-    <meta property="og:image" content="http://works.ioa.tw/OA-richman/img/og/story-compressor.jpg" alt="OA-richman" />
+    <meta property="og:image" content="https://works.ioa.tw/OA-richman/img/og/story-compressor.jpg" alt="OA-richman" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="600" />
     <meta property="og:image:height" content="600" />
 
-    <meta property="og:image" content="http://works.ioa.tw/OA-richman/img/og/non-stoty-compressor.jpg" alt="OA-richman" />
+    <meta property="og:image" content="https://works.ioa.tw/OA-richman/img/og/non-stoty-compressor.jpg" alt="OA-richman" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="600" />
     <meta property="og:image:height" content="314" />
